--- a/helm-configs/jaeger-values.yaml
+++ b/helm-configs/jaeger-values.yaml
@@ -2,6 +2,9 @@
 # This is a YAML-formatted file.
 # Jaeger values are grouped by component. Cassandra values override subchart values
 
+global:
+  imageRegistry:
+
 provisionDataStore:
   cassandra: false
   elasticsearch: false
@@ -18,9 +21,22 @@ fullnameOverride: ""
 
 allInOne:
   enabled: false
-  image: jaegertracing/all-in-one
-  pullPolicy: IfNotPresent
+  replicas: 1
+  image:
+    registry: ""
+    repository: jaegertracing/all-in-one
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   extraEnv: []
+  extraSecretMounts:
+    []
+    # - name: jaeger-tls
+    #   mountPath: /tls
+    #   subPath: ""
+    #   secretName: jaeger-tls
+    #   readOnly: true
   # command line arguments / CLI flags
   # See https://www.jaegertracing.io/docs/cli/
   args: []
@@ -31,6 +47,16 @@ allInOne:
   #       "param": 1
   #     }
   #   }
+  serviceAccount:
+    annotations: {}
+  service:
+    headless: true
+    collector:
+      otlp:
+        grpc:
+          name: otlp-grpc
+        http:
+          name: otlp-http
   ingress:
     enabled: false
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
@@ -62,7 +88,7 @@ allInOne:
   nodeSelector: {}
 
 storage:
-  # allowed values (cassandra, elasticsearch)
+  # allowed values (cassandra, elasticsearch, grpc-plugin, badger, memory)
   type: elasticsearch
   cassandra:
     host: cassandra-headless.observability.svc.cluster.local
@@ -80,7 +106,8 @@ storage:
     ## Use existing secret (ignores previous password)
     # existingSecret:
     ## Cassandra related env vars to be configured on the concerned components
-    extraEnv: []
+    extraEnv:
+      []
       # - name: CASSANDRA_SERVERS
       #   value: cassandra
       # - name: CASSANDRA_PORT
@@ -90,7 +117,8 @@ storage:
       # - name: CASSANDRA_TLS_ENABLED
       #   value: "false"
     ## Cassandra related cmd line opts to be configured on the concerned components
-    cmdlineParams: {}
+    cmdlineParams:
+      {}
       # cassandra.servers: cassandra
       # cassandra.port: 9042
       # cassandra.keyspace: jaeger_v1_test
@@ -110,22 +138,29 @@ storage:
     nodesWanOnly: false
     extraEnv: []
     ## ES related env vars to be configured on the concerned components
-      # - name: ES_SERVER_URLS
-      #   value: http://elasticsearch-master:9200
-      # - name: ES_USERNAME
-      #   value: elastic
-      # - name: ES_INDEX_PREFIX
-      #   value: test
+    # - name: ES_SERVER_URLS
+    #   value: http://elasticsearch-master:9200
+    # - name: ES_USERNAME
+    #   value: elastic
+    # - name: ES_INDEX_PREFIX
+    #   value: test
     ## ES related cmd line opts to be configured on the concerned components
     cmdlineParams:
+      {}
       # es.server-urls: http://elasticsearch-master:9200
       # es.username: elastic
       # es.index-prefix: test
-      es.version: 7
-      es.create-index-templates: "false"
+      #es.version: 7
+      #es.create-index-templates: "false"
     tls:
       enabled: false
       secretName: es-tls-secret
+      # The mount properties of the secret
+      mountPath: /es-tls/ca-cert.pem
+      subPath: ca-cert.pem
+      # How ES_TLS_CA variable will be set in the various components
+      ca: /es-tls/ca-cert.pem
+
   kafka:
     brokers:
       - bitnami-kafka-headless.observability.svc.cluster.local:9092
@@ -133,6 +168,14 @@ storage:
     authentication: none
     extraEnv: []
   grpcPlugin:
+    extraEnv: []
+  badger:
+    ephemeral: true
+    persistence:
+      mountPath: /mnt/data
+      useExistingPvcName: ""
+    extraEnv: []
+  memory:
     extraEnv: []
 
 # Begin: Override values on the Cassandra subchart to customize for Jaeger
@@ -150,12 +193,27 @@ cassandra:
 
 # Begin: Override values on the Kafka subchart to customize for Jaeger
 kafka:
-  replicaCount: 1
-  autoCreateTopicsEnable: true
-  zookeeper:
+  listeners:
+    client:
+      protocol: PLAINTEXT
+    controller:
+      protocol: PLAINTEXT
+    interbroker:
+      protocol: PLAINTEXT
+    external:
+      protocol: PLAINTEXT
+  controller:
     replicaCount: 1
-    serviceAccount:
-      create: true
+    extraConfig: |
+      auto.create.topics.enable=true
+# Zookeeper has been deprecated by Kafka in favor of Kraft Mode: https://developer.confluent.io/learn/kraft/
+# Documentation for upgrading Kafka and keeping Zookeeper: https://github.com/bitnami/charts/tree/main/bitnami/kafka#upgrading-from-zookeeper-mode
+# Documentation for migrating away from Zookeeper to Kraft Mode: https://github.com/bitnami/charts/tree/main/bitnami/kafka#migrating-from-zookeeper-early-access
+  # zookeeper:
+  #   enabled: false
+  #   replicaCount: 1
+  #   serviceAccount:
+  #     create: true
 
 # End: Override values on the Kafka subchart to customize for Jaeger
 
@@ -167,10 +225,15 @@ kafka:
 # use by Jaeger
 schema:
   annotations: {}
-  image: jaegertracing/jaeger-cassandra-schema
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
-  resources: {}
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-cassandra-schema
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -188,7 +251,8 @@ schema:
   podSecurityContext: {}
   ## Deadline for cassandra schema creation job
   activeDeadlineSeconds: 300
-  extraEnv: []
+  extraEnv:
+    []
     # - name: MODE
     #   value: prod
     # - name: TRACE_TTL
@@ -197,17 +261,58 @@ schema:
     #   value: "0"
 
 # For configurable values of the elasticsearch if provisioned, please see:
-# https://github.com/elastic/helm-charts/tree/master/elasticsearch#configuration
+# https://github.com/bitnami/charts/tree/main/bitnami/elasticsearch
 elasticsearch: {}
+
+# Example that uses no auth:
+# elasticsearch:
+#   fullnameOverride: "elasticsearch"
+#   image:
+#     registry: ""
+#     repository: docker.io/bitnami/elasticsearch
+#     tag: ""
+#   master:
+#     masterOnly: false
+#     replicaCount: 3
+#     extraEnvVars:
+#       - name: ES_JAVA_OPTS
+#         value: "-Xmx20g -Xms20g"
+#     persistence:
+#       enabled: true
+#       storageClass: managed-premium
+#       accessModes: [ "ReadWriteOnce" ]
+#       size: 100gb
+#   extraConfig:
+#     cluster.max_shards_per_node: 3000
+#   sysctlImage:
+#     registry: ""
+#     repository: docker.io/bitnami/os-shell
+#     tag: 12-debian-12-r18
+#   volumePermissions:
+#     enabled: true
+#     image:
+#       registry: ""
+#       repository: docker.io/bitnami/os-shell
+#       tag: 12-debian-12-r18
+#   data:
+#     replicaCount: 0
+#   coordinating:
+#     replicaCount: 0
+#   ingest:
+#     replicaCount: 0
 
 ingester:
   enabled: false
   podSecurityContext: {}
   securityContext: {}
   annotations: {}
-  image: jaegertracing/jaeger-ingester
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-ingester
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   dnsPolicy: ClusterFirst
   cmdlineParams: {}
   replicaCount: 1
@@ -223,7 +328,8 @@ ingester:
     # List of IP ranges that are allowed to access the load balancer (if supported)
     loadBalancerSourceRanges: []
     type: ClusterIP
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 1
     #   memory: 1Gi
@@ -234,6 +340,7 @@ ingester:
     create: true
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
+    annotations: {}
     name:
   nodeSelector:
     appstype: observability
@@ -245,6 +352,9 @@ ingester:
   podLabels: {}
   extraSecretMounts: []
   extraConfigmapMounts: []
+  extraEnv: []
+  envFrom: []
+  initContainers: []
 
   serviceMonitor:
     enabled: false
@@ -260,15 +370,19 @@ agent:
   securityContext: {}
   enabled: false
   annotations: {}
-  image: jaegertracing/jaeger-agent
-  # tag: 1.22
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-agent
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   cmdlineParams: {}
   extraEnv: []
   daemonset:
     useHostPort: false
-    updateStrategy: {}
+    updateStrategy:
+      {}
       # type: RollingUpdate
       # rollingUpdate:
       #   maxUnavailable: 1
@@ -298,7 +412,8 @@ agent:
     automountServiceAccountToken: false
     name:
     annotations: {}
-  nodeSelector: {}
+  nodeSelector:
+    appstype: observability
   tolerations: []
   affinity: {}
   podAnnotations: {}
@@ -317,6 +432,7 @@ agent:
   #   subPath: ""
   #   configMap: jaeger-config
   #   readOnly: true
+  envFrom: []
   useHostNetwork: false
   dnsPolicy: ClusterFirst
   priorityClassName: ""
@@ -336,15 +452,19 @@ collector:
   securityContext: {}
   enabled: true
   annotations: {}
-  image: jaegertracing/jaeger-collector
-  # tag: 1.22
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-collector
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   dnsPolicy: ClusterFirst
   extraEnv: []
+  envFrom: []
   cmdlineParams: {}
   basePath: /
-  replicaCount: 3
+  replicaCount: 1
   autoscaling:
     enabled: false
     minReplicas: 2
@@ -355,7 +475,7 @@ collector:
   service:
     annotations: {}
     # The IP to be used by the load balancer (if supported)
-    loadBalancerIP: ''
+    loadBalancerIP: ""
     # List of IP ranges that are allowed to access the load balancer (if supported)
     loadBalancerSourceRanges: []
     type: ClusterIP
@@ -369,14 +489,17 @@ collector:
       port: 14268
       # nodePort:
     # can accept Zipkin spans in JSON or Thrift
-    zipkin: {}
+    zipkin:
+      {}
       # port: 9411
       # nodePort:
     otlp:
       grpc:
+        name: otlp-grpc
         port: 4317
         # nodePort:
       http:
+        name: otlp-http
         port: 4318
         # nodePort:
   ingress:
@@ -395,17 +518,18 @@ collector:
     #   - host: chart-example.local
     #     servicePort: grpc
     # annotations:
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     # labels:
-      # app: jaeger-collector
+    # app: jaeger-collector
     # tls:
-      # Secrets must be manually created in the namespace.
-      # - secretName: chart-example-tls
-      #   hosts:
-      #     - chart-example.local
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
     pathType:
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 1
     #   memory: 1Gi
@@ -493,10 +617,24 @@ collector:
 query:
   enabled: true
   basePath: /
+  initContainers: []
   oAuthSidecar:
     enabled: false
-    image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.0
-    pullPolicy: IfNotPresent
+    resources:
+      {}
+      # limits:
+      #   cpu: 500m
+      #   memory: 512Mi
+      # requests:
+      #   cpu: 256m
+      #   memory: 128Mi
+    image:
+      registry: quay.io
+      repository: oauth2-proxy/oauth2-proxy
+      tag: v7.6.0
+      digest: ""
+      pullPolicy: IfNotPresent
+      pullSecrets: []
     containerPort: 4180
     args: []
     extraEnv: []
@@ -518,32 +656,36 @@ query:
   securityContext: {}
   agentSidecar:
     enabled: true
-#    resources:
-#      limits:
-#        cpu: 500m
-#        memory: 512Mi
-#      requests:
-#        cpu: 256m
-#        memory: 128Mi
+  #    resources:
+  #      limits:
+  #        cpu: 500m
+  #        memory: 512Mi
+  #      requests:
+  #        cpu: 256m
+  #        memory: 128Mi
   annotations: {}
-  image: jaegertracing/jaeger-query
-  # tag: 1.22
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-query
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   dnsPolicy: ClusterFirst
   cmdlineParams: {}
   extraEnv: []
+  envFrom: []
   replicaCount: 1
   service:
     annotations: {}
-    type: ClusterIP
+    type: NodePort
     # List of IP ranges that are allowed to access the load balancer (if supported)
     loadBalancerSourceRanges: []
     port: 80
     # Specify a custom target port (e.g. port of auth proxy)
     # targetPort: 8080
     # Specify a specific node port when type is NodePort
-    # nodePort: 32500
+    nodePort: 32500
   ingress:
     enabled: false
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
@@ -555,19 +697,20 @@ query:
     # hosts:
     #   - chart-example.local
     # annotations:
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     # labels:
-      # app: jaeger-query
+    # app: jaeger-query
     # tls:
-      # Secrets must be manually created in the namespace.
-      # - secretName: chart-example-tls
-      #   hosts:
-      #     - chart-example.local
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
     pathType:
     health:
       exposed: false
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -636,17 +779,21 @@ query:
 spark:
   enabled: false
   annotations: {}
-  image: jaegertracing/spark-dependencies
-  imagePullSecrets: []
-  tag: latest
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/spark-dependencies
+    tag: latest
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   cmdlineParams: {}
   extraEnv: []
   schedule: "49 23 * * *"
   successfulJobsHistoryLimit: 5
   failedJobsHistoryLimit: 5
   concurrencyPolicy: Forbid
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -655,10 +802,12 @@ spark:
     #   memory: 128Mi
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
-  nodeSelector: {}
+  nodeSelector:
+    appstype: observability
   tolerations: []
   affinity: {}
   extraSecretMounts: []
@@ -676,27 +825,34 @@ esIndexCleaner:
   podSecurityContext:
     runAsUser: 1000
   annotations: {}
-  image: jaegertracing/jaeger-es-index-cleaner
-  imagePullSecrets: []
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-es-index-cleaner
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   cmdlineParams: {}
-  extraEnv: []
+  extraEnv:
+    []
     # - name: ROLLOVER
     #   value: 'true'
   schedule: "55 23 * * *"
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
   concurrencyPolicy: Forbid
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
     # requests:
     #   cpu: 256m
     #   memory: 128Mi
-  numberOfDays: 3
+  numberOfDays: 7
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
@@ -713,15 +869,18 @@ esIndexCleaner:
   # ttlSecondsAfterFinished: 120
 
 esRollover:
-  enabled: false
+  enabled: true
   securityContext: {}
   podSecurityContext:
     runAsUser: 1000
   annotations: {}
-  image: jaegertracing/jaeger-es-rollover
-  imagePullSecrets: []
-  tag: latest
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-es-rollover
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   cmdlineParams: {}
   extraEnv:
     - name: CONDITIONS
@@ -730,7 +889,8 @@ esRollover:
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
   concurrencyPolicy: Forbid
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -754,7 +914,8 @@ esRollover:
   podLabels: {}
   # ttlSecondsAfterFinished: 120
   initHook:
-    extraEnv: []
+    extraEnv:
+      []
       # - name: SHARDS
       #   value: "3"
     annotations: {}
@@ -768,21 +929,25 @@ esLookback:
   podSecurityContext:
     runAsUser: 1000
   annotations: {}
-  image: jaegertracing/jaeger-es-rollover
-  imagePullSecrets: []
-  tag: latest
-  pullPolicy: IfNotPresent
+  image:
+    registry: ""
+    repository: jaegertracing/jaeger-es-rollover
+    tag: ""
+    digest: ""
+    pullPolicy: IfNotPresent
+    pullSecrets: []
   cmdlineParams: {}
   extraEnv:
     - name: UNIT
       value: days
     - name: UNIT_COUNT
-      value: '7'
-  schedule: '5 0 * * *'
+      value: "7"
+  schedule: "5 0 * * *"
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
   concurrencyPolicy: Forbid
-  resources: {}
+  resources:
+    {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -791,6 +956,7 @@ esLookback:
     #   memory: 128Mi
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
@@ -811,8 +977,22 @@ hotrod:
   podSecurityContext: {}
   securityContext: {}
   replicaCount: 1
+  # set the primary command(s) for the hotrod application
+  args:
+    - all
+  # add extra arguments to the hotrod application to customize tracing
+  extraArgs: []
+  #   - --otel-exporter=otlp
+  #   - --jaeger-ui=http://jaeger.chart.local
+  # add extra environment variables to the hotrod application
+  extraEnv: []
+  #   - name: OTEL_EXPORTER_OTLP_ENDPOINT
+  #     value: http://my-otel-collector.chart.local:4318
   image:
+    registry: ""
     repository: jaegertracing/example-hotrod
+    tag: ""
+    digest: ""
     pullPolicy: IfNotPresent
     pullSecrets: []
   service:
@@ -830,7 +1010,8 @@ hotrod:
     # Used to create Ingress record (should be used with service.type: ClusterIP).
     hosts:
       - chart-example.local
-    annotations: {}
+    annotations:
+      {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     tls:
@@ -839,7 +1020,8 @@ hotrod:
       #   hosts:
       #     - chart-example.local
     pathType:
-  resources: {}
+  resources:
+    {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -854,8 +1036,10 @@ hotrod:
     create: true
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
+    annotations: {}
     name:
-  nodeSelector: {}
+  nodeSelector:
+    appstype: observability
   tolerations: []
   affinity: {}
   tracing:
