--- a/kubernetes/containerd/install_dependencies_all_nodes.yaml
+++ b/kubernetes/containerd/install_dependencies_all_nodes.yaml
@@ -71,7 +71,7 @@
 
     - name: Add Docker's APT repository
       apt_repository:
-        repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        repo: "deb [arch={{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
         state: present
         filename: 'docker'
         update_cache: true
