--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -46,7 +46,7 @@ data:
       username = "user"
       password = "user"
       headers = {"database" = "telegraf", "retention_policy" = "default"}
-                   
+      
     [[inputs.cpu]]
       percpu = true
       totalcpu = true
@@ -57,7 +57,7 @@ data:
       ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs", "loop*"]
       fieldinclude = ["free", "used", "total", "used_percent"]
     [[inputs.diskio]]
-      devices = ["sda", "sdb", "sdc", "vda"]
+      devices = ["sd*", "vda", "mmc*"]
       fieldinclude = ["read_time", "write_time", "reads", "writes", "io_time"]
     [[inputs.mem]]
       fieldinclude = ["available", "free", "total", "used_percent"]
@@ -67,6 +67,7 @@ data:
     [[inputs.system]]
       fieldinclude = ["load1", "load5", "load15"]
     [[inputs.temp]]
+      metric_format = "v2"
     [[inputs.intel_powerstat]]
       package_metrics = ["current_power_consumption"]
     [[inputs.kubernetes]]
