--- a/helm-configs/promtail-values.yaml
+++ b/helm-configs/promtail-values.yaml
@@ -58,9 +58,16 @@ deployment:
     targetMemoryUtilizationPercentage:
     # behavior: {}
 
-    # -- Set deployment object update strategy
-    strategy:
-      type: RollingUpdate
+  # -- Set deployment object update strategy
+  strategy:
+    type: RollingUpdate
+
+service:
+  enabled: false
+  # -- Labels for the service
+  labels: {}
+  # -- Annotations for the service
+  annotations: {}
 
 secret:
   # -- Labels for the Secret
@@ -93,7 +100,7 @@ image:
   # -- Docker image repository
   repository: grafana/promtail
   # -- Overrides the image tag whose default is the chart's appVersion
-  tag: null
+  tag: ""
   # -- Docker image pull policy
   pullPolicy: IfNotPresent
 
@@ -186,6 +193,11 @@ serviceAccount:
   imagePullSecrets: []
   # -- Annotations for the service account
   annotations: {}
+  # -- Automatically mount a ServiceAccount's API credentials
+  automountServiceAccountToken: true
+
+# -- Automatically mount API credentials for a particular Pod
+automountServiceAccountToken: true
 
 # -- Node selector for pods
 nodeSelector: {}
@@ -233,21 +245,14 @@ extraVolumes:
   - name: journal
     hostPath:
       path: /var/log/journal
-  - name: machine-id
-    hostPath:
-      path: /etc/machine-id
-
 # Extra volume mounts together. Corresponds to `extraVolumes`.
 extraVolumeMounts:
   - name: journal
     mountPath: /var/log/journal
     readOnly: true
-  - name: machine-id
-    mountPath: /etc/machine-id
-    readOnly: true
 
 # Extra args for the Promtail container.
-extraArgs:
+extraArgs: []
 # -- Example:
 # -- extraArgs:
 # --   - -client.external-labels=hostname=$(HOSTNAME)
@@ -596,11 +601,11 @@ sidecar:
     enabled: false
     image:
       # -- The Docker registry for sidecar config-reloader
-      registry: docker.io
+      registry: ghcr.io
       # -- Docker image repository for sidecar config-reloader
       repository: jimmidyson/configmap-reload
       # -- Docker image tag for sidecar config-reloader
-      tag: v0.8.0
+      tag: v0.12.0
       # -- Docker image pull policy for sidecar config-reloader
       pullPolicy: IfNotPresent
     # Extra args for the config-reloader container.
