--- a/kubernetes/containerd/init_cni_k8s_cluster.yaml
+++ b/kubernetes/containerd/init_cni_k8s_cluster.yaml
@@ -37,10 +37,11 @@
         kubeconfig: "{{ ansible_user_dir }}/.kube/config"
         name: cilium
         chart_ref: cilium/cilium
-        chart_version: 1.15.4
+        chart_version: 1.17.3
         release_namespace: kube-system
+        create_namespace: true
         values:
-          kubeProxyReplacement: strict
+          kubeProxyReplacement: true
           k8sServiceHost: "{{ API_SERVER_IP }}"
           k8sServicePort: "{{ API_SERVER_PORT }}"
 
@@ -50,7 +51,7 @@
     - name: Enable UI and Relay for Cilium using Helm
       become: yes
       become_user: aida
-      shell: helm upgrade cilium cilium/cilium --version 1.15.4 --namespace kube-system --reuse-values --set hubble.relay.enabled=true --set hubble.ui.enabled=true --set hubble.ui.service.type=NodePort
+      shell: helm upgrade cilium cilium/cilium --version 1.17.3 --namespace kube-system --reuse-values --set hubble.relay.enabled=true --set hubble.ui.enabled=true --set hubble.ui.service.type=NodePort
 
 #    - name: install Pod network
 #      become: yes
